[package]
name = "s2n-quic-server-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
s2n-quic = { version = "1", features = ["unstable-provider-datagram"]}
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1.38", features = ["full"] }
